--- a/src/components/FeaturesGridSection.astro
+++ b/src/components/FeaturesGridSection.astro
@@ -129,7 +129,7 @@ const features = [
                         <!-- Icon and Highlight Badge -->
                         <div class='flex items-center justify-between mb-4'>
                             <div class='w-12 h-12 rounded-xl bg-white/10 border border-white/20 flex items-center justify-center'>
-                                <div class={feature.iconColor} set:html={feature.icon} />
+                                <div class="text-white/70" set:html={feature.icon} />
                             </div>
                             <div class='px-2 py-1 bg-gradient-to-r from-orange-500/20 to-yellow-500/20 border border-orange-400/30 rounded-full'>
                                 <span class='text-orange-300 text-xs font-medium'>{feature.highlight}</span>
