--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 ---
-import logo from '../assets/logo.svg';
+import logo from '../assets/logo.png';
 
 const currentYear = new Date().getFullYear();
 
@@ -92,7 +92,7 @@ const supportLinks: Link[] = [
                         <img
                             src={logo.src}
                             alt='Klub kreatora Logo'
-                            class='w-12 h-12 mr-3'
+                            class='w-auto h-20 mr-3'
                         />
                         <span class='text-2xl font-bold text-white'
                             >Klub kreatora</span
