--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,18 +19,18 @@ import Layout from '../layouts/Layout.astro';
 
 <Layout>
     <HeroSection />
-    <BrandsTrack />
+    <!-- <BrandsTrack /> -->
     <FeatureList />
     <PointsSection />
-    <ProblemSection />
-    <BuildYourBrand />
-    <StatsSocialProofSection />
+    <!-- <ProblemSection /> -->
+    <!-- <BuildYourBrand /> -->
+    <!-- <StatsSocialProofSection /> -->
     <WelcomeSection />
     <FeaturesGridSection />
-    <LevelsSection />
-    <SuccessStoriesSection />
-    <TestimonialsSection />
+    <!-- <LevelsSection /> -->
+    <!-- <SuccessStoriesSection /> -->
+    <!-- <TestimonialsSection /> -->
     <PricingSection />
-    <WhyUsSection />
+    <!-- <WhyUsSection /> -->
     <FAQSection />
 </Layout>
