--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,10 +7,87 @@ import Footer from '../components/Footer.astro';
 <html lang='sr'>
     <head>
         <meta charset='UTF-8' />
-        <meta name='viewport' content='width=device-width' />
-        <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
+        <meta name='viewport' content='width=device-width, initial-scale=1.0' />
         <meta name='generator' content={Astro.generator} />
-        <title>Astro Basics</title>
+
+        <!-- Favicon -->
+        <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
+        <link rel='apple-touch-icon' href='/favicon.svg' />
+
+        <!-- Primary Meta Tags -->
+        <title>
+            Klub kreatora - Master Video Editing & Build Your Creator Career
+        </title>
+        <meta
+            name='title'
+            content='Klub kreatora - Master Video Editing & Build Your Creator Career'
+        />
+        <meta
+            name='description'
+            content='Transform your passion into profit with 60+ hours of cutting-edge video editing tutorials. Master Premiere Pro, After Effects, and build a successful creator career with personalized feedback from industry experts.'
+        />
+        <meta
+            name='keywords'
+            content='video editing, premiere pro, after effects, creator course, video tutorials, content creation, social media, youtube, tiktok, instagram, video editor training'
+        />
+        <meta name='author' content='High Ticket Creators LLC' />
+        <meta name='robots' content='index, follow' />
+        <meta name='language' content='Serbian' />
+        <meta name='revisit-after' content='7 days' />
+
+        <!-- Open Graph / Facebook -->
+        <meta property='og:type' content='website' />
+        <meta property='og:url' content='https://klubkreatora.com/' />
+        <meta
+            property='og:title'
+            content='Klub kreatora - Master Video Editing & Build Your Creator Career'
+        />
+        <meta
+            property='og:description'
+            content='Transform your passion into profit with 60+ hours of cutting-edge video editing tutorials. Master Premiere Pro, After Effects, and build a successful creator career.'
+        />
+        <meta
+            property='og:image'
+            content='https://klubkreatora.com/og-image.jpg'
+        />
+        <meta property='og:image:width' content='1200' />
+        <meta property='og:image:height' content='630' />
+        <meta property='og:site_name' content='Klub kreatora' />
+        <meta property='og:locale' content='sr_RS' />
+
+        <!-- Twitter -->
+        <meta property='twitter:card' content='summary_large_image' />
+        <meta property='twitter:url' content='https://klubkreatora.com/' />
+        <meta
+            property='twitter:title'
+            content='Klub kreatora - Master Video Editing & Build Your Creator Career'
+        />
+        <meta
+            property='twitter:description'
+            content='Transform your passion into profit with 60+ hours of cutting-edge video editing tutorials. Master Premiere Pro, After Effects, and build a successful creator career.'
+        />
+        <meta
+            property='twitter:image'
+            content='https://klubkreatora.com/og-image.jpg'
+        />
+
+        <!-- Additional SEO Meta Tags -->
+        <meta name='theme-color' content='#f97316' />
+        <meta name='msapplication-TileColor' content='#f97316' />
+        <meta name='application-name' content='Klub kreatora' />
+        <meta name='apple-mobile-web-app-capable' content='yes' />
+        <meta
+            name='apple-mobile-web-app-status-bar-style'
+            content='black-translucent'
+        />
+        <meta name='apple-mobile-web-app-title' content='Klub kreatora' />
+
+        <!-- Canonical URL -->
+        <link rel='canonical' href='https://klubkreatora.com/' />
+
+        <!-- Preconnect to improve performance -->
+        <link rel='preconnect' href='https://fonts.googleapis.com' />
+        <link rel='preconnect' href='https://fonts.gstatic.com' crossorigin />
     </head>
     <body>
         <slot />
